all changes done

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="ATS Resume Checker - AI-Powered Resume Analysis" />
     <meta property="og:description" content="Free ATS Resume Checker with instant analysis. Upload your resume and get detailed feedback on keyword optimization and ATS compatibility." />
+    <meta property="og:url" content="https://ats-resume-checker-swart.vercel.app/" />
+    <meta property="og:image" content="/logo.png" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
