all changes done

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,8 @@
     <meta property="og:description" content="Free ATS Resume Checker with instant analysis. Upload your resume and get detailed feedback on keyword optimization and ATS compatibility." />
     <meta property="og:url" content="https://ats-resume-checker-swart.vercel.app/" />
     <meta property="og:image" content="/logo.png" />
-    
+    <meta name="google-site-verification" content="LrnaVY5PcwWE0KOszZnvxOweKTGTYcU2zc5j_RjZUxA" />
+
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="ATS Resume Checker - AI-Powered Resume Analysis" />
