--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,12 @@
     <meta name="description" content="Free ATS Resume Checker with instant analysis. Upload your resume and get detailed feedback on keyword optimization, ATS compatibility, and improvement suggestions for your target job role." />
     <meta name="keywords" content="ATS resume checker, resume analysis, job application, keyword optimization, resume scanner" />
     
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://ats-resume-checker-swart.vercel.app/" />
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="ATS Resume Checker - AI-Powered Resume Analysis" />
+    <meta property="og:title" content="ATS Resume Checker - AI-Powered Free Resume Analysis" />
     <meta property="og:description" content="Free ATS Resume Checker with instant analysis. Upload your resume and get detailed feedback on keyword optimization and ATS compatibility." />
     <meta property="og:url" content="https://ats-resume-checker-swart.vercel.app/" />
     <meta property="og:image" content="/logo.png" />
@@ -17,8 +20,9 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="ATS Resume Checker - AI-Powered Resume Analysis" />
+    <meta property="twitter:title" content="ATS Resume Checker - AI-Powered Free Resume Analysis" />
     <meta property="twitter:description" content="Free ATS Resume Checker with instant analysis. Upload your resume and get detailed feedback on keyword optimization and ATS compatibility." />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
   <body>
     <div id="root"></div>
