--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,8 @@
     <meta property="twitter:title" content="ATS Resume Checker - AI-Powered Free Resume Analysis" />
     <meta property="twitter:description" content="Free ATS Resume Checker with instant analysis. Upload your resume and get detailed feedback on keyword optimization and ATS compatibility." />
     <meta name="twitter:image" content="/logo.png" />
+    <link rel="icon" href="/logo.png" />
+
   </head>
   <body>
     <div id="root"></div>
